--- a/Engenharia de dados/Python para datascience/estrutura_dados.ipynb
+++ b/Engenharia de dados/Python para datascience/estrutura_dados.ipynb
@@ -24,10 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3144.222\n"
+     ]
+    }
+   ],
+   "source": [
+    "gastos = [2172.54, 3701.35, 3518.09, 3456.61, 3249.38, 2840.82, 3891.45, 3075.26, 2317.64, 3219.08]\n",
+    "\n",
+    "media = sum(gastos)/len(gastos)\n",
+    "\n",
+    "print(f'A média de gastos é {media} reais.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,10 +53,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 compras foram acima de R$3000,00.\n",
+      "70.0% dos gastos foram acima de R$3000,00.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gastos = [2172.54, 3701.35, 3518.09, 3456.61, 3249.38, 2840.82, 3891.45, 3075.26, 2317.64, 3219.08]\n",
+    "\n",
+    "contador = 0\n",
+    "for valor in gastos:\n",
+    "    if(valor>3000):\n",
+    "        contador += 1\n",
+    "\n",
+    "acima = contador/len(gastos)\n",
+    "\n",
+    "porc_acima = acima * 100\n",
+    "\n",
+    "print(f'{contador} compras foram acima de R$3000,00.')\n",
+    "print(f'{porc_acima}% dos gastos foram acima de R$3000,00.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,10 +91,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista de números inseridos: [2, 3, 6, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "\n",
+    "\n",
+    "for i in range (0,5):\n",
+    "    numero = int(input('Digite um número inteiro'))\n",
+    "    lista.append(numero)\n",
+    "\n",
+    "print(f'Lista de números inseridos: {lista}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,10 +123,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista de números inseridos: [5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "\n",
+    "\n",
+    "for i in range (0,5):\n",
+    "    numero = int(input('Digite um número inteiro'))\n",
+    "    lista.append(numero)\n",
+    "\n",
+    "print(f'Lista de números inseridos: {lista[::-1]}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,10 +155,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista de números primos: [2, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero  = int(input('Digite um número inteiro'))\n",
+    "lista = []\n",
+    "\n",
+    "for num in range (2, numero):\n",
+    "    primo = True\n",
+    "    for divisivel in range(2, num):\n",
+    "        if num % divisivel == 0:\n",
+    "            primo = False\n",
+    "            break    \n",
+    "    if primo:\n",
+    "        lista.append(num)\n",
+    "\n",
+    "print(f'Lista de números primos: {lista}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +192,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data inválida!\n"
+     ]
+    }
+   ],
+   "source": [
+    "dia = int(input('Digite o dia: '))\n",
+    "mes = int(input('Digite o mês: '))\n",
+    "ano = int(input('Digite o ano: '))\n",
+    "\n",
+    "\n",
+    "#verificar se é ano bissexto\n",
+    "if(mes == 2):\n",
+    "    if ((ano % 4 ==0) and (ano %400 or ano%100 !=0)):\n",
+    "        dias_validos = 29\n",
+    "    else:\n",
+    "        dias_validos = 28\n",
+    "    \n",
+    "    if (dia >=1 and dia <=dias_validos):\n",
+    "        print('Data válida!')\n",
+    "    else:        \n",
+    "        print('Data inválida!')\n",
+    "\n",
+    "#verificar meses com 31 dias\n",
+    "elif mes in [1,3,5,7,8,10,12]:\n",
+    "    if (dia >=1 and dia <=31):\n",
+    "        print('Data válida!')\n",
+    "    else:        \n",
+    "        print('Data inválida!')\n",
+    "\n",
+    "#verificar meses com 30 dias\n",
+    "elif mes in [4,6,9,11]:\n",
+    "    if (dia >=1 and dia <=30):\n",
+    "        print('Data válida!')\n",
+    "    else:        \n",
+    "        print('Data inválida!')\n",
+    "\n",
+    "#Se mês não estiver entre 1 e 12\n",
+    "else:        \n",
+    "        print('Data inválida!')\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,10 +259,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Porcentagens de crescimento:\n",
+      "[75.00000000000001, 57.142857142857125, 51.51515151515153, 56.0, 44.87179487179489, 46.90265486725664, 51.20481927710843, 50.59760956175297, 50.52910052910054]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dados_crescimento = [1.2, 2.1, 3.3, 5.0, 7.8, 11.3, 16.6, 25.1, 37.8, 56.9]\n",
+    "\n",
+    "porcentagem_crescimento = []\n",
+    "\n",
+    "for i in range (1, len(dados_crescimento)):\n",
+    "    porcentagem = 100 * (dados_crescimento[i] - dados_crescimento[i-1]) / (dados_crescimento[i-1])\n",
+    "    porcentagem_crescimento.append(porcentagem)\n",
+    "\n",
+    "\n",
+    "print(f'Porcentagens de crescimento:\\n{porcentagem_crescimento}')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,10 +294,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantidade de produtos doces: 5\n",
+      "Quantidade de produtos amargos: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lista que vai receber os valores de IDs\n",
+    "ids = []\n",
+    "# Variáveis contadoras de doces e amargos\n",
+    "doce = []\n",
+    "amargo = []\n",
+    "\n",
+    "for i in range(0,10):\n",
+    "    ids.append(int(input(f'Digite o {i+1}° ID: ')))\n",
+    "\n",
+    "for id in ids:\n",
+    "    if (id % 2 ==0):\n",
+    "        doce.append(id)\n",
+    "    else:\n",
+    "        amargo.append(id)\n",
+    "\n",
+    "print(f'Quantidade de produtos doces: {len(doce)}')\n",
+    "print(f'Quantidade de produtos amargos: {len(amargo)}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,10 +349,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nota final: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "resposta_correta = ['D', 'A', 'C', 'B', 'A', 'D', 'C', 'C', 'A', 'B']\n",
+    "\n",
+    "resposta_aluno = []\n",
+    "\n",
+    "pontos = 0\n",
+    "\n",
+    "for i in range(0, 10):\n",
+    "  resposta_aluno.append(input(f'Insira a resposta da questão {i + 1}: ').upper())\n",
+    "\n",
+    "\n",
+    "for i in range(0, 10):\n",
+    "  if(resposta_correta[i] == resposta_aluno[i]):\n",
+    "    pontos += 1\n",
+    "\n",
+    "\n",
+    "print(f'Nota final: {pontos}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,10 +389,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outubro\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatura_mes = []\n",
+    "acima_media = 0\n",
+    "meses = ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro']\n",
+    "\n",
+    "\n",
+    "for i in range(0,12):\n",
+    "    temperatura_mes.append(int(input(f'Insira a temperatura média do mês {i + 1}: ')))\n",
+    "\n",
+    "media_anual = sum(temperatura_mes)/len(temperatura_mes)\n",
+    "\n",
+    "for i in range (0,12):\n",
+    "    if (temperatura_mes[i]> media_anual):\n",
+    "        print(meses[i])\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +435,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "{'Produto A': 300, 'Produto B': 80, 'Produto C': 60,\n",
+    " 'Produto D': 200, 'Produto E': 250, 'Produto F': 30}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,8 +521,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
